--- a/ng-admin/src/app/about/about.component.html
+++ b/ng-admin/src/app/about/about.component.html
@@ -41,7 +41,7 @@
     <nz-card nzTitle="源代码地址" [nzBordered]="false">
 
       <p>此模板是在Github上开源的。您可以为模板做出贡献。
-        <a href="https://github.com/52ABP/LTMCompanyNameFree.YoyoCmsTemplate" target="_blank">https://github.com/52ABP/LTMCompanyNameFree.YoyoCmsTemplate</a>
+        <a href="https://github.com/52ABP/LTMCompanyNameFree.GYISMS" target="_blank">https://github.com/52ABP/LTMCompanyNameFree.GYISMS</a>
       </p>
 
       <p>如果您不熟悉ABP框架，可以看看我录制的公开课视频：
