--- a/ng-admin/src/layout/default/header/header.component.html
+++ b/ng-admin/src/layout/default/header/header.component.html
@@ -8,7 +8,7 @@
     </li>
     <!-- Github Page -->
     <li>
-      <a class="item" href="//github.com/52ABP/LTMCompanyNameFree.YoyoCmsTemplate" target="_blank">
+      <a class="item" href="//github.com/52ABP/LTMCompanyNameFree.GYISMS" target="_blank">
         <i class="anticon anticon-github"></i>
       </a>
     </li>
