--- a/ng-admin/src/basic-data/employee/employee.component.html
+++ b/ng-admin/src/basic-data/employee/employee.component.html
@@ -1,31 +1,67 @@
 <!--component html goes here -->
+<page-header [title]=""></page-header>
 <nz-card>
     <form nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
         <div nz-row [nzGutter]="24">
-            <!-- <div nz-col [nzSpan]="8" class="mb-md" [class.text-left]="'false'">
-                    <button nz-button nzType="primary" nzLoading>
-                            <i class="anticon anticon-poweroff"></i>
-                    <span>同步组织架构</span></button>
-                </div> -->
+            <div nz-col [nzSpan]="6" class="mb-md">
+                <div nz-form-item class="d-flex">
+                    <div nz-form-label>
+                        <nz-form-label nzFor="name">用户名</nz-form-label>
+                    </div>
+                    <div nz-form-control class="flex-1">
+                        <input nz-input [(ngModel)]="search.name" name="name" placeholder="请输入用户名" nzSize="default">
+                    </div>
+                </div>
+            </div>
+            <div nz-col [nzSpan]="6" class="mb-md">
+                <div nz-form-item class="d-flex">
+                    <div nz-form-label>
+                        <nz-form-label nzFor="mobile">电话号码</nz-form-label>
+                    </div>
+                    <div nz-form-control class="flex-1">
+                        <input nz-input [(ngModel)]="search.mobile" name="mobile" placeholder="请输入电话号码" nzSize="default">
+                    </div>
+                </div>
+            </div>
+            <div nz-col [nzSpan]="6" class="mb-md">
+                <div nz-form-item class="d-flex">
+                    <div nz-form-label>
+                        <nz-form-label nzFor="departMent">部门</nz-form-label>
+                    </div>
+                    <div nz-form-control class="flex-1">
+                        <nz-select [nzPlaceHolder]="'请选择部门'" name="status" [(ngModel)]="search.status" [nzShowSearch]="true">
+                            <nz-option *ngFor="let i of departMent" [nzLabel]="i.text" [nzValue]="i.value">
+                            </nz-option>
+                        </nz-select>
+                    </div>
+                </div>
+            </div>
+            <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'">
+                <button nz-button type="submit" nzType="primary" [nzLoading]="loading">查询</button>
+                <button nz-button type="reset" (click)="refreshData(true)" class="mx-sm">重置</button>
+            </div>
         </div>
     </form>
-    <nz-table #rowSelectionTable (nzCurrentPageDataChange)="currentPageDataChange($event)" (nzPageIndexChange)="refreshStatus()" (nzPageSizeChange)="refreshStatus()">
+    <nz-table #nzTable [nzFrontPagination]="false" [nzData]="employeeList" [nzTotal]="query.total" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
         <thead>
             <tr>
-                <!-- <th nzShowCheckbox [(nzChecked)]="allChecked" [nzIndeterminate]="indeterminate" (nzCheckedChange)="checkAll($event)"></th> -->
                 <th>用户名</th>
-                <th>性别</th>
-                <th>年龄</th>
+                <th>职位</th>
+                <th>电话号码</th>
+                <th>所属部门</th>
                 <th>操作</th>
             </tr>
         </thead>
-        <!-- <tbody>
-      <tr *ngFor="let data of rowSelectionTable.data">
-        <td nzShowCheckbox [(nzChecked)]="data.checked" [nzDisabled]="data.disabled" (nzCheckedChange)="refreshStatus($event)"></td>
-        <td>{{data.name}}</td>
-        <td>{{data.age}}</td>
-        <td>{{data.address}}</td>
-      </tr>
-    </tbody> -->
+        <tbody>
+            <tr *ngFor="let data of nzTable.data">
+                <td>{{data.name}}</td>
+                <td>{{data.position}}</td>
+                <td>{{data.mobile}}</td>
+                <td>{{data.department}}</td>
+                <td>
+                    <a (click)="goDetail(data.id)">查看详情</a>
+                </td>
+            </tr>
+        </tbody>
     </nz-table>
 </nz-card>
