--- a/ng-admin/src/basic-data/organization/organization.component.scss
+++ b/ng-admin/src/basic-data/organization/organization.component.scss
@@ -2,54 +2,58 @@
     overflow: hidden;
     margin: 0 -24px;
     padding: 0 24px;
-  }
+}
 
-  :host ::ng-deep .ant-tree li {
+ :host ::ng-deep .ant-tree li {
     padding: 4px 0 0 0;
-  }
+}
 
-  @keyframes shine {
+@keyframes shine {
     0% {
-      opacity: 1;
+        opacity: 1;
     }
     50% {
-      opacity: 0.5;
+        opacity: 0.5;
     }
     100% {
-      opacity: 1;
+        opacity: 1;
     }
-  }
+}
 
-  .shine-animate {
+.shine-animate {
     animation: shine 2s ease infinite;
-  }
+}
 
-  .custom-node {
+.custom-node {
     cursor: pointer;
     line-height: 26px;
     margin-left: 4px;
     display: inline-block;
     margin: 0 -1000px;
     padding: 0 1000px;
-  }
+}
 
-  .active {
+.active {
     background: #1890FF;
     color: #fff;
-  }
+}
 
-  .is-dragging {
+.is-dragging {
     background-color: transparent !important;
     color: #000;
     opacity: 0.7;
-  }
+}
 
-  .file-name, .folder-name, .file-desc, .folder-desc {
+.file-name,
+.folder-name,
+.file-desc,
+.folder-desc {
     margin-left: 4px;
-  }
+}
 
-  .file-desc, .folder-desc {
+.file-desc,
+.folder-desc {
     padding: 2px 8px;
     background: #87CEFF;
     color: #FFFFFF;
-  }
+}
