--- a/ng-admin/src/layout/default/sidebar/components/sidebar-nav.component.html
+++ b/ng-admin/src/layout/default/sidebar/components/sidebar-nav.component.html
@@ -10,7 +10,7 @@
     <li *ngIf="canShow(menuItem)&&hasChildren(menuItem)" nz-submenu [(nzOpen)]="menuItem.isopen" (nzOpenChange)="openHandler(menuItem)">
       <span title>
         <i *ngIf="menuItem.icon" class="{{menuItem.icon}}"></i>
-        <span>{{menuItem.text + ' | ' + menuItem.isopen}}</span>
+        <span>{{menuItem.text}}</span>
       </span>
       <ul>
         <ng-template ngFor let-subMenuItem [ngForOf]="menuItem.children" let-mainMenuItemIndex="index">
@@ -24,7 +24,7 @@
           <li *ngIf="canShow(subMenuItem)&&hasChildren(subMenuItem)" nz-submenu [(nzOpen)]="subMenuItem.isopen" (nzOpenChange)="openHandler(subMenuItem)">
             <span title>
               <i *ngIf="subMenuItem.icon" class="{{subMenuItem.icon}}"></i>
-              <span>{{subMenuItem.text + ' | ' + subMenuItem.isopen}}</span>
+              <span>{{subMenuItem.text}}</span>
             </span>
 
             <ul>
