--- a/ng-admin/src/meeting-management/meeting-room/meeting-room.component.html
+++ b/ng-admin/src/meeting-management/meeting-room/meeting-room.component.html
@@ -1,1 +1,52 @@
 <!--component html goes here -->
+<page-header [title]=""></page-header>
+<nz-card>
+    <form nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="8" class="mb-md">
+                <div nz-form-item class="d-flex">
+                    <div nz-form-label>
+                        <nz-form-label nzFor="name">会议室名称</nz-form-label>
+                    </div>
+                    <div nz-form-control class="flex-1">
+                        <input nz-input [(ngModel)]="search.name" name="name" placeholder="请输入会议室名称" nzSize="default">
+                    </div>
+                </div>
+            </div>
+            <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
+                <button nz-button type="submit" nzType="primary" [nzLoading]="loading">查询</button>
+                <button nz-button type="reset" (click)="refreshData(true)" class="mx-sm">重置</button>
+                <button nz-button type="button" (click)="createRoom()" nzType="primary">
+                    <i class="anticon anticon-plus"></i>
+                    <span>新建</span>
+                </button>
+            </div>
+        </div>
+    </form>
+    <ng-template #totalTemplate let-total>共 {{query.total}} 条</ng-template>
+    <nz-table #nzTable [nzFrontPagination]="false" [nzData]="roomList" [nzShowTotal]="totalTemplate" [nzTotal]="query.total" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true" (nzPageIndexChange)="refreshData()"
+        (nzPageSizeChange)="refreshData()">
+        <thead>
+            <tr>
+                <th>会议室名称</th>
+                <th>会议室类型</th>
+                <th>会议室布局</th>
+                <th>地址</th>
+                <th>操作</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let data of nzTable.data">
+                <td>{{data.name}}</td>
+                <td>{{data.roomType}}</td>
+                <td>{{data.layoutPattern}}</td>
+                <td>{{data.address}}</td>
+                <td>
+                    <a (click)="goDetail(data.id)">详情</a>
+                    <nz-divider nzType="vertical"></nz-divider>
+                    <a (click)="goDetail(data.id)">删除</a>
+                </td>
+            </tr>
+        </tbody>
+    </nz-table>
+</nz-card>
