--- a/ng-admin/src/meeting-management/meeting-room/meeting-room.component.html
+++ b/ng-admin/src/meeting-management/meeting-room/meeting-room.component.html
@@ -4,14 +4,12 @@
     <form nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
         <div nz-row [nzGutter]="24">
             <div nz-col [nzSpan]="8" class="mb-md">
-                <div nz-form-item class="d-flex">
-                    <div nz-form-label>
-                        <nz-form-label nzFor="name">会议室名称</nz-form-label>
-                    </div>
-                    <div nz-form-control class="flex-1">
+                <nz-form-item class="d-flex">
+                    <nz-form-label nzFor="name">会议室名称</nz-form-label>
+                    <nz-form-control class="flex-1">
                         <input nz-input [(ngModel)]="search.name" name="name" placeholder="请输入会议室名称" nzSize="default">
-                    </div>
-                </div>
+                    </nz-form-control>
+                </nz-form-item>
             </div>
             <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                 <button nz-button type="submit" nzType="primary" [nzLoading]="loading">查询</button>
@@ -38,13 +36,13 @@
         <tbody>
             <tr *ngFor="let data of nzTable.data">
                 <td>{{data.name}}</td>
-                <td>{{data.roomType}}</td>
-                <td>{{data.layoutPattern}}</td>
+                <td>{{data.typeName}}</td>
+                <td>{{data.layoutName}}</td>
                 <td>{{data.address}}</td>
                 <td>
-                    <a (click)="goDetail(data.id)">详情</a>
-                    <nz-divider nzType="vertical"></nz-divider>
-                    <a (click)="goDetail(data.id)">删除</a>
+                    <a (click)="goDetail(data.id)">查看详情</a>
+                    <!-- <nz-divider nzType="vertical"></nz-divider>
+                    <a (click)="goDetail(data.id)">删除</a> -->
                 </td>
             </tr>
         </tbody>
