--- a/ng-admin/src/tobacco-management/visit-task/visit-task.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/visit-task.component.html
@@ -14,7 +14,7 @@
             <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
                 <button nz-button type="submit" nzType="primary" [nzLoading]="loading">查询</button>
                 <button nz-button type="reset" (click)="refreshData(true)" class="mx-sm">重置</button>
-                <button nz-button type="button" (click)="createRoom()" nzType="primary">
+                <button nz-button type="button" (click)="createTask()" nzType="primary">
                     <i class="anticon anticon-plus"></i>
                     <span>新建</span>
                 </button>
