--- a/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
+++ b/ng-admin/src/tobacco-management/visit-task/task-detail/task-detail.component.html
@@ -17,8 +17,8 @@
                         <nz-form-control nz-col [nzSm]="20">
                             <nz-radio-group formControlName="type" [(ngModel)]="task.type" class="mb-md">
                                 <label nz-radio [nzValue]="o.value" *ngFor="let o of types">
-                                            <span>{{o.text}}</span>
-                                        </label>
+                                    <span>{{o.text}}</span>
+                                </label>
                             </nz-radio-group>
                         </nz-form-control>
                     </nz-form-item>
@@ -32,28 +32,6 @@
                             </nz-radio-group>
                         </nz-form-control>
                     </nz-form-item>
-                    <nz-form-item nz-row *ngIf="task.isExamine == true">
-                        <nz-form-label nz-col [nzSm]="4" nzFor="teName" nzRequired>考核项名称</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="teName" placeholder="请输入考核项名称，若为空则自动设置为非考核项" id="teName" [(ngModel)]="taskExamine.name">
-                            <nz-form-explain *ngIf="validateForm.get('teName').dirty&&validateForm.get('teName').hasError('maxlength')">字符长度小于等于50</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row *ngIf="task.isExamine == true">
-                        <nz-form-label nz-col [nzSm]="4" nzFor="teDesc">考核项描述</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <textarea nz-input row="3" formControlName="teDesc" id="teDesc" [(ngModel)]="taskExamine.desc"></textarea>
-                            <nz-form-explain *ngIf="validateForm.get('teDesc').dirty&&validateForm.get('teDesc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row *ngIf="task.isExamine == true">
-                        <nz-form-label nz-col [nzSm]="4" nzFor="teSeq">考核项序号</nz-form-label>
-                        <nz-form-control [nzSm]="20" nzHasFeedback>
-                            <input nz-input formControlName="teSeq" id="teSeq" [(ngModel)]="taskExamine.seq">
-                            <nz-form-explain *ngIf="validateForm.get('teSeq').dirty&&validateForm.get('teSeq').hasError('pattern')">请输入正整数</nz-form-explain>
-                        </nz-form-control>
-                    </nz-form-item>
-
                     <nz-form-item nz-row>
                         <nz-form-label nz-col [nzSm]="4" nzFor="desc">任务描述</nz-form-label>
                         <nz-form-control [nzSm]="20" nzHasFeedback>
@@ -64,6 +42,38 @@
                 </div>
             </div>
         </form>
+        <form *ngIf="task.isExamine == true" nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
+            <div nz-row [nzGutter]="24">
+                <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
+                    <button nz-button type="button" (click)="showModal(null)" nzType="primary">
+                        <i class="anticon anticon-plus"></i>
+                        <span>新增考核项</span>
+                    </button>
+                </div>
+            </div>
+        </form>
+        <ng-template *ngIf="task.isExamine == true" #totalTemplate let-total>共 {{query.total}} 条</ng-template>
+        <nz-table *ngIf="task.isExamine == true" #nzTable [nzData]="taskExamineList" [nzFrontPagination]="false" [nzTotal]="query.total" [nzShowTotal]="totalTemplate" [(nzPageIndex)]="query.pageIndex" [(nzPageSize)]="query.pageSize" [nzLoading]="loading" [nzShowSizeChanger]="true"
+            (nzPageIndexChange)="refreshData()" (nzPageSizeChange)="refreshData()">
+            <thead>
+                <tr>
+                    <th>考核项名称</th>
+                    <th>考核项描述</th>
+                    <th>考核项序号</th>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let data of nzTable.data">
+                    <td>{{data.name}}</td>
+                    <td>{{data.desc}}</td>
+                    <td>{{data.seq}}</td>
+                    <td>
+                        <a (click)="deleteExamine(data)">删除</a>
+                    </td>
+                </tr>
+            </tbody>
+        </nz-table>
         <footer-toolbar errorCollect>
             <button nz-button [nzType]="'default'" (click)="return()">
                 {{l("返回")}}
@@ -77,3 +87,4 @@
         </footer-toolbar>
     </nz-card>
 </nz-card>
+<examine-detail-modal #selectExamineModal (modalSelect)="getSelectData($event)"></examine-detail-modal>
