--- a/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule-detail/schedule-detail.component.html
@@ -10,7 +10,15 @@
                             {{schedule.status==true?"已发布":"草稿"}}
                         </nz-form-control>
                     </nz-form-item>
-                    <nz-form-item nz-row style="margin-bottom: 0px;">
+                    <nz-form-item nz-row>
+                        <nz-form-label nz-col [nzSm]="4" nzFor="name" nzRequired>计划名称</nz-form-label>
+                        <nz-form-control [nzSm]="20" nzHasFeedback>
+                            <input nz-input formControlName="name" id="name" [(ngModel)]="schedule.name">
+                            <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('maxlength')">字符长度小于等于200</nz-form-explain>
+                            <nz-form-explain *ngIf="validateForm.get('name').dirty&&validateForm.get('name').hasError('required')">计划名称不能为空</nz-form-explain>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <!-- <nz-form-item nz-row style="margin-bottom: 0px;">
                         <nz-form-label nz-col [nzSm]="4" nzRequired>拜访任务</nz-form-label>
                         <nz-form-control [nzSm]="16" nzHasFeedback>
                             <input nz-input readonly="readonly" placeholder="请选择任务" formControlName="taskName" id="taskName" [(ngModel)]="scheduleTask.taskName">
@@ -25,7 +33,7 @@
                         <nz-form-control [nzSm]="4" style="float: right;">
                             <button nz-button type="button" nzType="primary" (click)="showEmployeeModal()" style="margin-left: 20px">任务指派</button>
                         </nz-form-control>
-                    </nz-form-item>
+                    </nz-form-item> -->
                     <nz-form-item nz-row style="margin-bottom: 0px;">
                         <nz-form-label nz-col [nzSm]="4" nzRequired>计划类型</nz-form-label>
                         <nz-form-control nz-col [nzSm]="20">
@@ -36,36 +44,73 @@
                             </nz-radio-group>
                         </nz-form-control>
                     </nz-form-item>
-                    <nz-form-item nz-row>
+                    <!-- <nz-form-item nz-row>
                         <nz-form-label nz-col [nzSm]="4" nzFor="visitNum">默认拜访次数</nz-form-label>
                         <nz-form-control [nzSm]="20" nzHasFeedback>
                             <input nz-input formControlName="visitNum" id="visitNum" [(ngModel)]="scheduleTask.visitNum">
                             <nz-form-explain *ngIf="validateForm.get('visitNum').dirty&&validateForm.get('visitNum').hasError('pattern')">请输入整数</nz-form-explain>
                         </nz-form-control>
-                    </nz-form-item>
-                    <nz-form-item nz-row>
-                        <nz-form-label nz-col [nzSm]="4" nzFor="beginTime">计划开始时间</nz-form-label>
+                    </nz-form-item> -->
+                    <nz-form-item nz-row *ngIf="schedule.type == 3">
+                        <nz-form-label nz-col [nzSm]="4" nzFor="beginTime">计划执行时间</nz-form-label>
                         <nz-form-control [nzSm]="20">
-                            <nz-date-picker formControlName="beginTime" [nzFormat]="yyyy/MM/dd" [(ngModel)]="schedule.beginTime" [nzPlaceHolder]="'请选择日期'"></nz-date-picker>
+                            <nz-date-picker formControlName="beginTime" [nzFormat]="yyyy/MM/dd" [(ngModel)]="schedule.beginTime" nzPlaceHolder="请选择日期"></nz-date-picker>
                         </nz-form-control>
                     </nz-form-item>
-                    <nz-form-item nz-row>
+                    <nz-form-item nz-row *ngIf="schedule.type == 1">
+                        <nz-form-label nz-col [nzSm]="4" nzFor="beginTime">计划开始时间</nz-form-label>
+                        <nz-form-control [nzSm]="20">
+                            <nz-month-picker formControlName="beginTime" [nzFormat]="monthFormat" [(ngModel)]="schedule.beginTime" nzPlaceHolder="请选择日期"></nz-month-picker>
+                        </nz-form-control>
+                    </nz-form-item>
+                    <nz-form-item nz-row *ngIf="schedule.type == 1">
                         <nz-form-label nz-col [nzSm]="4" nzFor="endTime">计划结束时间</nz-form-label>
                         <nz-form-control [nzSm]="20">
-                            <nz-date-picker formControlName="endTime" [nzFormat]="yyyy/MM/dd" [(ngModel)]="schedule.endTime" [nzPlaceHolder]="'请选择日期'"></nz-date-picker>
+                            <nz-month-picker formControlName="endTime" [nzFormat]="monthFormat" [(ngModel)]="schedule.endTime" nzPlaceHolder="请选择日期"></nz-month-picker>
                         </nz-form-control>
                     </nz-form-item>
                     <nz-form-item nz-row>
                         <nz-form-label nz-col [nzSm]="4" nzFor="desc">计划说明</nz-form-label>
                         <nz-form-control [nzSm]="20" nzHasFeedback>
                             <textarea nz-input row="3" formControlName="desc" id="desc" [(ngModel)]="schedule.desc"></textarea>
-                            <!-- <input nz-input formControlName="desc" id="desc" [(ngModel)]="schedule.desc"> -->
                             <nz-form-explain *ngIf="validateForm.get('desc').dirty&&validateForm.get('desc').hasError('maxlength')">字符长度小于等于500</nz-form-explain>
                         </nz-form-control>
                     </nz-form-item>
                 </div>
             </div>
         </form>
+
+        <!-- <form *ngIf="isPush" nz-form (ngSubmit)="refreshData(false,true)" [nzLayout]="'inline'">
+            <div nz-row [nzGutter]="24">
+                <div nz-col [nzSpan]="6" class="mb-md" [class.text-right]="'true'" style="float:right">
+                    <button nz-button type="button" (click)="showModal(null)" nzType="primary">
+                        <i class="anticon anticon-plus"></i>
+                        <span>新增考核项</span>
+                    </button>
+                </div>
+            </div>
+        </form> -->
+        <!-- <ng-template *ngIf="isPush" #totalTemplate let-total>共 {{query.total}} 条</ng-template> -->
+        <nz-table *ngIf="isPush" #nzTable [nzData]="taskList" [nzShowPagination]="false" [nzFrontPagination]="false" [nzLoading]="loading">
+            <thead>
+                <tr>
+                    <th>任务名称</th>
+                    <th>任务类型</th>
+                    <th>是否考核</th>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let data of nzTable.data">
+                    <td>{{data.name}}</td>
+                    <td>{{data.typeName}}</td>
+                    <td>{{data.isExamine == true?"是":"否"}}</td>
+                    <td>
+                        <a (click)="deleteExamine(data)">指派任务</a>
+                    </td>
+                </tr>
+            </tbody>
+        </nz-table>
         <footer-toolbar errorCollect>
             <button nz-button [nzType]="'default'" (click)="return()">
                 {{l("返回")}}
