--- a/ng-admin/src/tobacco-management/schedule/schedule.component.html
+++ b/ng-admin/src/tobacco-management/schedule/schedule.component.html
@@ -26,6 +26,7 @@
         (nzPageSizeChange)="refreshData()">
         <thead>
             <tr>
+                <th>计划名称</th>
                 <th>计划类型</th>
                 <th>计划状态</th>
                 <th>发布时间</th>
@@ -34,6 +35,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let data of nzTable.data">
+                <td>{{data.name}}</td>
                 <td>{{data.typeName}}</td>
                 <td>{{data.status==true?"已发布":"草稿"}}</td>
                 <td>{{data.publishTime| _date}}</td>
